# DockersProjects

./: .gitignore  README.md
Docker1/: README.md  index.html  package-lock.json  server.js
MultithreadedFileSearcher/: CMakeLists.txt  Dockerfile  README.md  test_search
MultithreadedFileSearcher/app/: main.cpp
MultithreadedFileSearcher/include/: file_searcher.hpp  result_aggregator.hpp  thread_pool.hpp
MultithreadedFileSearcher/installer/windows/: MultiThreadedFileSearcher.iss
MultithreadedFileSearcher/src/: file_searcher.cpp  result_aggregator.cpp  thread_pool.cpp
MultithreadedFileSearcher/test/: CMakeLists.txt  test_search.cpp
